--- a/Server/package.json
+++ b/Server/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/JAKEkr/IIAIS#readme",
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "winston": "^3.2.1"
   }
 }
