--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "app-root-path": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.8.6",
     "morgan": "^1.9.1",
     "winston": "^3.2.1"
   }
