--- a/Client/.gitignore
+++ b/Client/.gitignore
@@ -1,40 +1,6 @@
 
-# Created by https://www.gitignore.io/api/c++,visualstudio
-# Edit at https://www.gitignore.io/?templates=c++,visualstudio
-
-### C++ ###
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+# Created by https://www.gitignore.io/api/visualstudio
+# Edit at https://www.gitignore.io/?templates=visualstudio
 
 ### VisualStudio ###
 ## Ignore Visual Studio temporary files, build results, and
@@ -107,7 +73,9 @@ StyleCopReport.xml
 *_p.c
 *_h.h
 *.ilk
+*.obj
 *.iobj
+*.pch
 *.pdb
 *.ipdb
 *.pgc
@@ -384,4 +352,4 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 
-# End of https://www.gitignore.io/api/c++,visualstudio
+# End of https://www.gitignore.io/api/visualstudio
