--- a/Client/Flyaway/Flyaway.vcxproj.filters
+++ b/Client/Flyaway/Flyaway.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClInclude Include="ParkinglotView.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TAB1.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TAB2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Flyaway.cpp">
@@ -80,6 +86,12 @@
     <ClCompile Include="ParkinglotView.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TAB1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TAB2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Flyaway.rc">
@@ -96,6 +108,24 @@
       <Filter>리소스 파일</Filter>
     </Image>
     <Image Include="res\Flyaway.ico">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\t1.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\t2.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\bitmap3.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\bitmap4.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\bitmap5.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
+    <Image Include="res\bitmap6.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
   </ItemGroup>
