--- a/Server/package.json
+++ b/Server/package.json
@@ -20,19 +20,25 @@
     "agenda": "^2.3.0",
     "app-root-path": "^3.0.0",
     "body-parser": "^1.19.0",
+    "config": "^3.2.4",
     "cron": "^1.7.2",
     "express": "^4.17.1",
     "halfstreamxml": "^0.2.1",
+    "mongo": "^0.1.0",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
     "morgan": "^1.9.1",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.0",
+    "node-ssh": "^7.0.0",
+    "request": "^2.88.0",
     "sax": "^1.2.4",
     "shelljs": "^0.8.3",
     "winston": "^3.2.1",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.23",
+    "xml2json": "^0.12.0",
+    "xml2json-light": "^1.0.6",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
