--- a/Client/Flyaway/Flyaway.vcxproj
+++ b/Client/Flyaway/Flyaway.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{C4F9080C-6F5A-4272-8C3A-B7C09D789DBB}</ProjectGuid>
     <Keyword>MFCProj</Keyword>
     <RootNamespace>Flyaway</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -183,6 +183,8 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ArrivalTabDialog.h" />
+    <ClInclude Include="DepartureTabDialog.h" />
     <ClInclude Include="FacilityView.h" />
     <ClInclude Include="FlightInfoView.h" />
     <ClInclude Include="Flyaway.h" />
@@ -194,11 +196,11 @@
     <ClInclude Include="ParkinglotView.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="TAB1.h" />
-    <ClInclude Include="TAB2.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ArrivalTabDialog.cpp" />
+    <ClCompile Include="DepartureTabDialog.cpp" />
     <ClCompile Include="FacilityView.cpp" />
     <ClCompile Include="FlightInfoView.cpp" />
     <ClCompile Include="Flyaway.cpp" />
@@ -213,8 +215,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="TAB1.cpp" />
-    <ClCompile Include="TAB2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Flyaway.rc" />
